fixed some mouse visibility issues

--- a/static/stylesheets/general_style.css
+++ b/static/stylesheets/general_style.css
@@ -97,16 +97,18 @@ body {
   width: 2rem;
   height: 2rem;
   border: 2px solid rgb(255, 255, 255);
+  box-shadow:  0px 0px 0px 1px rgb(0, 0, 0);
+  /* , inset 0px 0px 0px 1px rgb(0, 0, 0); */
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
-  color: "white";
+  color: rgb(0,0,0,0);
   pointer-events: none;
   transition: all 0.3s ease;
   transition-property: background, transform;
   transform-origin: 100% 100%;
   backdrop-filter: blur(3px);
-  z-index: 100;
+  z-index: 10000000000;
   overflow: hidden;
 }
 
